force-app/main/default/objects/Training_Service_Catalog__c/Training_Service_Catalog__c.object-meta.xml
<CustomObject>
    <description>DLI</description>
    <label>Training Service Catalog</label>
    <nameField>
        <label>Instructor-led Workshop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Services Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>