force-app/main/default/objects/Training_Service_Catalog__c/fields/Complete_ID__c.field-meta.xml
<CustomField>
    <fullName>Complete_ID__c</fullName>
    <formula>Course_ID__c &amp; &quot; - &quot; &amp;  Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete ID</label>
    <type>Text</type>
</CustomField>