force-app/main/default/objects/Training_Service_Catalog__c/fields/Content_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Content_Nickname__c</fullName>
    <label>Content Nickname</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anomaly Det.</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>CUDA C++</fullName>
            </value>
            <value>
                <fullName>CUDA Python</fullName>
            </value>
            <value>
                <fullName>CV2</fullName>
            </value>
            <value>
                <fullName>Cyber</fullName>
            </value>
            <value>
                <fullName>DCC</fullName>
            </value>
            <value>
                <fullName>Deep Learning for Healthcare Genomics</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>FMV</fullName>
            </value>
            <value>
                <fullName>Image  Analysis</fullName>
            </value>
            <value>
                <fullName>Ind. Insp.</fullName>
            </value>
            <value>
                <fullName>IVA</fullName>
            </value>
            <value>
                <fullName>MDT</fullName>
            </value>
            <value>
                <fullName>Multi-GPU</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>NLP</fullName>
            </value>
            <value>
                <fullName>OpenACC</fullName>
            </value>
            <value>
                <fullName>Pred. Maint.</fullName>
            </value>
            <value>
                <fullName>RAPIDS</fullName>
            </value>
            <value>
                <fullName>Robo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>