force-app/main/default/objects/Training_Service_Catalog__c/fields/Course_ID__c.field-meta.xml
<CustomField>
    <fullName>Course_ID__c</fullName>
    <label>Course ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>