force-app/main/default/objects/Training_Service_Catalog__c/fields/Service_Group__c.field-meta.xml
<CustomField>
    <fullName>Service_Group__c</fullName>
    <label>Service Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accelerating Data Science Workflows for Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Building Autonomous Vehicles with NVIDIA DRIVE</fullName>
            </value>
            <value>
                <fullName>Deep Learning for Anomaly Detection</fullName>
            </value>
            <value>
                <fullName>Deep Learning for Autonomous Vehicles - Perception</fullName>
            </value>
            <value>
                <fullName>Deep Learning for Digital Content Creation using AutoEncoders</fullName>
            </value>
            <value>
                <fullName>Deep Learning for Digital Content Creation Using GANs</fullName>
            </value>
            <value>
                <fullName>Deep Learning for Finance Trading Strategy</fullName>
            </value>
            <value>
                <fullName>Deep Learning for Full-Motion Video Analytics</fullName>
            </value>
            <value>
                <fullName>Deep Learning for Game Development</fullName>
            </value>
            <value>
                <fullName>Deep Learning for Healthcare Genomics</fullName>
            </value>
            <value>
                <fullName>Deep Learning for Healthcare Image Analysis</fullName>
            </value>
            <value>
                <fullName>Deep Learning for Industrial Inspection</fullName>
            </value>
            <value>
                <fullName>Deep Learning for Intelligent Video Analytics</fullName>
            </value>
            <value>
                <fullName>Deep Learning for Predictive Maintenance</fullName>
            </value>
            <value>
                <fullName>Deep Learning for Robotics</fullName>
            </value>
            <value>
                <fullName>Fundamentals of Accelerated Computing using OpenACC</fullName>
            </value>
            <value>
                <fullName>Fundamentals of Accelerated Computing with CUDA C/C++</fullName>
            </value>
            <value>
                <fullName>Fundamentals of Accelerated Computing with CUDA Python</fullName>
            </value>
            <value>
                <fullName>Fundamentals of Accelerating Data Science with RAPIDS</fullName>
            </value>
            <value>
                <fullName>Fundamentals of Deep Learning for Computer Vision</fullName>
            </value>
            <value>
                <fullName>Fundamentals of Deep Learning for Multi-GPUs</fullName>
            </value>
            <value>
                <fullName>Fundamentals of Deep Learning for Multiple Data Types</fullName>
            </value>
            <value>
                <fullName>Fundamentals of Deep Learning for Natural Language Processing</fullName>
            </value>
            <value>
                <fullName>Healthcare &quot;Flex&quot;</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>