force-app/main/default/objects/Training_Service_Catalog__c/fields/Training_Service_Number__c.field-meta.xml
<CustomField>
    <fullName>Training_Service_Number__c</fullName>
    <displayFormat>TS-{000000}</displayFormat>
    <label>Training Service Number</label>
    <type>AutoNumber</type>
</CustomField>