force-app/main/default/objects/Training_Service_Catalog__c/listViews/All_Active_Training_Services.listView-meta.xml
<ListView>
    <fullName>All_Active_Training_Services</fullName>
    <columns>NAME</columns>
    <columns>Industry_Segment__c</columns>
    <columns>Version__c</columns>
    <columns>Course_ID__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Active Training Services</label>
</ListView>