force-app/main/default/objects/Training_Service_Catalog__c/listViews/All_English_Workshops.listView-meta.xml
<ListView>
    <fullName>All_English_Workshops</fullName>
    <columns>NAME</columns>
    <columns>Complete_ID__c</columns>
    <columns>Active__c</columns>
    <columns>Content_Nickname__c</columns>
    <columns>Course_ID__c</columns>
    <columns>Industry_Segment__c</columns>
    <columns>Notes__c</columns>
    <columns>Training_Service_Number__c</columns>
    <columns>Version__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>English</value>
    </filters>
    <label>All English Workshops</label>
</ListView>