force-app/main/default/objects/Training_Service_Catalog__c/listViews/All_Training_Services1.listView-meta.xml
<ListView>
    <fullName>All_Training_Services1</fullName>
    <columns>NAME</columns>
    <columns>Complete_ID__c</columns>
    <columns>Course_ID__c</columns>
    <columns>Version__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Training Services</label>
</ListView>